--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,176 +1,216 @@
 @charset "UTF-8";
-@import url("https://use.fontawesome.com/releases/v5.14.0/css/all.css");
-
-*{
+* {
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
-	}
-	ul, ol{
+}
+ul, ol {
 	list-style: none;
-	}
-	a {
+}
+a  {
 	text-decoration: none;
-	}
-	body {
-	background: #ebfaff;
-	}
-	section {
-	width: 340px;
-	padding: 30px;
-	background-color: #fff;
-	margin: 50px auto;
-	box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1);
-	border-radius: 10px;
-	}
-	
-	section nav.menu {
-		width: 100%;
-	}
-	section nav.menu::after {
-		content: "";
-		display: block;
-		clear: both;
-	}
-	section nav.menu a {
-		font-size: 20px;
-		color: #666;
-	}
-	section nav.menu a:nth-of-type(1) {
-		float: left;
-	}
-	section nav.menu a:nth-of-type(2) {
-		float: right;
-	}
-	section article.profile {
-		width: 100%;
-		text-align: center;
-	}
-	section article.profile img {
-		width: 200px;
-		height: 200px;
-		border-radius: 50%;
-		margin-bottom: 20px;
-		box-shadow: 5px 15px 30px rgba(173, 216, 230, 0.8);
-	}
-	section article.profile h1 {
-		font-weight:bold;
-		font-size: 20px;
-		line-height: 1;
-		color: #555;
-		margin-bottom: 5px;
-	}
-	section article.profile h2 {
-		font-weight: normal;
-		font-size: 12px;
-		font-family: "arial";
-		color: #bbb;
-		margin-bottom: 30px;
-	}
-	section a.btnView {
-		display: block;
-		width: 180px;
-		height: 32px;
-		margin: 0px auto 20px;
-		background-color: #444;
-		border-radius: 16px;
-		font-weight: bold;
-		font-size: 10px;
-		font-family: "arial";
-		color: #fff;
-		line-height: 32px;
-		text-align: center;
-		background: liner-gradient(45deg, #4affff, #35e0f7);
-		box-shadow: 5px 10px 20px rgba(0, 255, 255, 0.493);
-	}
-	section ul.contact {
-		margin-bottom: 25px;
-	}
-	section ul.contact li {
-		width: 100%;
-		padding: 10px 0px;
-		border-bottom: 1px solid #eee;
-	}
-	section ul.contact li i {
-		border-bottom: none;
-	}
-	section ul.contact li i {
-		width: 20%;
-		text-align: center;
-		color: #555;
-		font-size: 15px;
-		text-shadow: 2px 2px 2px #ddd;
-	}
-	section ul.contact li span {
-		font-weight: normal;
-		font-size: 11px;
-		font-family: "orbitron";
-		color: #555;
-		letter-spacing: 1px;
-	}
-	section nav.others {
-		width: 100%;
-		text-align: center;
-	}
-	section nav.others a {
-		display: inline-block;
-		width: 30px;
-		height:30px;
-		border-radius: 50%;
-		margin: 0px 10px;		
-	}
-	section nav.others a:nth-of-type(1) {
-		background-color: #35e0f7;
-		box-shadow: 5px 5px 10px raba(74, 255, 255, 0.7);
-	}
-	section nav.others a:nth-of-type(2) {
-		background-color: #55f5cd;
-		box-shadow: 5px 5px 10px raba(85, 245, 178, 0.7);
-	}
-	section nav.others a:nth-of-type(3) {
-		background-color: #ff80df;
-		box-shadow: 5px 5px 10px raba(255, 128, 223, 0.7);
-	}
-	section nav.others a:nth-of-type(4) {
-		background-color: #a794fd;
-		box-shadow: 5px 5px 10px raba(167, 148, 253, 0.7);
-	}
-	section nav.others a {
-		display: inline-block;
-		width: 30px;
-		height: 30px;
-		border-radius: 50%;
-		margin: 0px 10px;
-		opacity: 0.4;
-		filter: saturate(0.7);
-	}
-	section nav.others a.on {
-		opacity: 1;
-		filter: saturate(1);
-	}
-	/* member1*/
-	body.member1 {
-		background-color: #ebfaff;
-	}
-	body.member1 section article.profile img {
-		box-shadow: 5px 15px 30px rgba(173, 216, 230, 0.8);
-	}
-	body.member1 section a.btnView {
-		background: linear-gradient(45deg, #4affff, #35e0f7);
-		box-shadow: 5px 10px 20px rgba(0, 255, 255, 0.493);
-	}
-	/* member2*/
-	body.member2{
-		background-color: #edffeb
-	}
-	body.member2 section article.profile img{
-		box-shadow: 5px 15px 20px #bdccb783;
-	}
-		body.member2 section a.btnView {
-		background: linear-gradient(45deg, #a0ff9d, #55f5b2);
-		box-shadow: 5px 10px 20px rgba(33, 250, 105, 0.3);
-	}
-	/*member3*/
-	body.member3 {
-		background-color: #fff3fd;
-	}
+}
+
+/* header */
+header {
+	width: 100%;
+	border-bottom: 1px solid #ddd;
+}
+header .inner {
+	width: 1180px;
+	height: 120px;
+	margin: 0px auto;
+	position: relative; /* 자식 absolute 요소의 기준점 설정 */
+}
+header .inner h1 {
+	position: absolute;
+	left: 0px;
+	bottom: 15px;
+}
+header .inner h1 a {
+	font: bold 24px/1 "arial"; /* font 축악형 */
+	color: #444;
+}
+header .inner .util {
+	position: absolute;
+	top: 20px;
+	right: 30px;
+}
+header .inner .util li {
+	float: left;
+}
+header .inner .util li a {
+	display: block;
+	font: 12px/1 "arial";
+	color: #999;
+	padding: 0px 10px;
+}
+header .inner #gnb {
+	position: absolute;
+	bottom: 0px;
+	right: 0px;
+}
+header .inner #gnb li {
+	float: left;
+}
+header .inner #gnb li a {
+	display: block; /* 인라인 요소는 block을 설정하여 크기 조절 가능 */
+	font: bold 15px/1 "arial";
+	color: #555;
+	padding: 20px 40px;
+	transition: all 0.5s;
+}
+header .inner #gnb li a:hover {
+	background: #555;
+	color: #fff;
+}
+/* visual */
+figure {
+	width: 100%;
+	height: calc(100vh - 120px); /*전체 브라우저 높이에서 120px만큼 빼줌 */
+	background: #000; 
+	position: relative;
+	overflow: hidden;
+	padding-top: 250px;	
+}
+figure video {
+	object-fit:cover; /* 영상을 figure 영역 안에 꽉 차도록 설정*/
+	width: 100%;
+	height: 100%;
+	opacity: 0.3;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+}
+figure .inner {
+	width: 1180px;
+	margin: 0px auto;
+	position: relative;
+}
+figure .inner h1 {
+	font: normal 120px/1 "arial";
+	color: #fff;
+	margin-bottom: 20px;
+}
+figure .inner p {
+	font: 16px/1.4 "arial";
+	color: #888;
+	margin-bottom: 60px;
+}
+figure .inner a {
+	display: block;
+	width: 400px;
+	height: 30px;
+	border: 1px solid #bbb;
+	font: bold 11px/30px "arial";
+	color: #fff;
+	text-align:center;
+	letter-spacing: 1px;
+	transition: all 0.5s;
+}
+figure .inner a:hover {
+	background: #fff;
+	color: #555;
+}
+/* news */
+section {
+	width: 100%;
+	padding: 200px 0px;
+}
+section .inner {
+	width: 1180px;
+	margin: 0px auto;
+}
+section .inner h1 {
+	font: bold 24px/1 "arial";
+	color: #555;
+	text-align: center;
+	margin-bottom: 50px;
+}
+section .inner .wrap {
+	width: 100%;
+}
+section .inner .wrap::after {
+	content: "";
+	display: block;
+	clear: both;
+}
+section .inner .wrap article {
+	width: 280px;
+	float: left;
+	margin-right: 20px;
+}
+section .inner .wrap article:last-child {
+	margin-right: 0px;
+}
+section .inner .wrap article h2 {
+	margin-bottom: 10px;
+}
+section .inner .wrap article h2 a {
+	font: bold 16px/1 "arial";
+	color: #555;
+}
+section .inner .wrap article p {
+	font: 14px/1.4 "arial";
+	color: #777;
+}
+section .inner .wrap article .pic {
+	width: 100%;
+	height: 120px;
+	background: #333;
+	margin-bottom: 15px;
+	position: relative;
+	overflow: hidden;
+}
+section .inner .wrap article .pic img {
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+}
+footer {
+	width: 100%;
+	background: #333;
+	padding: 100px 0px;
+	border-top: 1px solid #888;
+}
+footer .inner {
+	width: 1180px;
+	margin: 0px auto;
+}
+footer .inner .upper {
+	width: 100%;
+	border-bottom: 1px solid #777;
+	padding-bottom: 20px;
+}
+footer .inner .upper::after {
+	content: "";
+	display: block;
+	clear: both;
+}
+footer .inner .upper h1 {
+	float: left;
+	font: bold 24px/1 "arial";
+	color: #666;
+}
+footer .inner .upper ul {
+	float: right;
+}
+footer .inner .upper ul li {
+	float: left;
+	margin-left:20px;
+}
+footer .inner .upper ul li a {
+	font: bold 14px/1 "arial";
+	color: #666;
+}
+footer .inner .lower address {
+	width: 100%;
+	font: 12px/1.3 "arial";
+	color: #777;
+	margin-bottom: 20px;
+}
+footer .inner .lower p {
+	width: 100%;
+	font: 12px/1 "arial";
+	color: #777;
+}
